# escargot

./: .babelrc  .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Jenkinsfile  LICENSE  LICENSE.BSD-2-Clause  LICENSE.MPL-2.0  Makefile  MakefileClang  README.md  build_android.sh  build_third_party.sh  build_third_party_android.sh  build_third_party_android_nothread.sh  codecov.yml  excludelist.orig.xml  package.json  sonar-project.properties  test262.py
samples/rtos/freertos/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  toolchain-cm55.cmake
src/: CMakeLists.txt  Escargot.h  EscargotInfo.h.in
src/api/: EscargotAPICast.h  EscargotPublic.cpp  EscargotPublic.h
src/api/internal/: ValueAdapter.h
src/builtins/: BuiltinArray.cpp  BuiltinArrayBuffer.cpp  BuiltinAsyncFromSyncIterator.cpp  BuiltinAsyncFunction.cpp  BuiltinAsyncGeneratorFunction.cpp  BuiltinAsyncIterator.cpp  BuiltinAtomics.cpp  BuiltinBigInt.cpp  BuiltinBoolean.cpp  BuiltinDataView.cpp  BuiltinDate.cpp  BuiltinError.cpp  BuiltinFinalizationRegistry.cpp  BuiltinFunction.cpp  BuiltinGeneratorFunction.cpp  BuiltinIntl.cpp  BuiltinIterator.cpp  BuiltinJSON.cpp  BuiltinMap.cpp  BuiltinMath.cpp  BuiltinNumber.cpp  BuiltinObject.cpp  BuiltinPromise.cpp  BuiltinProxy.cpp  BuiltinReflect.cpp  BuiltinRegExp.cpp  BuiltinSet.cpp  BuiltinShadowRealm.cpp  BuiltinSharedArrayBuffer.cpp  BuiltinString.cpp  BuiltinSymbol.cpp  BuiltinTemporal.cpp  BuiltinTypedArray.cpp  BuiltinWeakMap.cpp  BuiltinWeakRef.cpp  BuiltinWeakSet.cpp
src/codecache/: CodeCache.cpp  CodeCache.h  CodeCacheReaderWriter.cpp  CodeCacheReaderWriter.h
src/debugger/: Debugger.cpp  Debugger.h  DebuggerDevtools.cpp  DebuggerDevtools.h  DebuggerDevtoolsMessageBuilder.cpp  DebuggerDevtoolsMessageBuilder.h  DebuggerEscargot.cpp  DebuggerEscargot.h  DebuggerHttpRouter.cpp  DebuggerHttpRouter.h  DebuggerSha1.cpp  DebuggerTcp.cpp  DebuggerTcp.h  HeapSnapshot.cpp  HeapSnapshot.h
src/heap/: Allocator.cpp  Allocator.h  CustomAllocator.cpp  CustomAllocator.h  Heap.cpp  Heap.h  HeapProfiler.cpp  HeapProfiler.h  LeakChecker.cpp  LeakChecker.h  LeakCheckerBridge.cpp  LeakCheckerBridge.h  SbrkBaremetal.cpp
src/interpreter/: ByteCode.cpp  ByteCode.h  ByteCodeBlockData.h  ByteCodeGenerator.cpp  ByteCodeGenerator.h  ByteCodeInterpreter.cpp  ByteCodeInterpreter.h
src/intl/: Intl.cpp  Intl.h  IntlCollator.cpp  IntlDateTimeFormat.cpp  IntlDateTimeFormat.h  IntlDisplayNames.cpp  IntlDisplayNames.h  IntlDurationFormat.cpp  IntlDurationFormat.h  IntlListFormat.cpp  IntlListFormat.h  IntlLocale.cpp  IntlLocale.h  IntlNumberFormat.cpp  IntlNumberFormat.h  IntlPluralRules.cpp  IntlPluralRules.h  IntlRelativeTimeFormat.cpp  IntlRelativeTimeFormat.h  IntlSegmenter.cpp  IntlSegmenter.h
src/napi/: NapiEnv.cpp  NapiEnv.h  NapiFunctions.cpp  NapiPlatform.cpp  NapiPlatform.h  NapiTypes.h
src/parser/: ASTAllocator.cpp  ASTAllocator.h  ASTBuilder.h  CodeBlock.cpp  CodeBlock.h  Lexer.cpp  Lexer.h  ParserStringView.h  Script.cpp  Script.h  ScriptParser.cpp  ScriptParser.h  UnicodeIdentifierTables.cpp  UnicodeIdentifierTables.h
src/parser/ast/: AST.h  ASTBuffer.cpp  ASTBuffer.h  ASTContext.h  ArrayExpressionNode.h  ArrayPatternNode.h  ArrowFunctionExpressionNode.h  AssignmentExpressionBitwiseAndNode.h  AssignmentExpressionBitwiseOrNode.h  AssignmentExpressionBitwiseXorNode.h  AssignmentExpressionDivisionNode.h  AssignmentExpressionExponentiationNode.h  AssignmentExpressionLeftShiftNode.h  AssignmentExpressionLogicalAndNode.h  AssignmentExpressionLogicalNullishNode.h  AssignmentExpressionLogicalOrNode.h  AssignmentExpressionMinusNode.h  AssignmentExpressionModNode.h  AssignmentExpressionMultiplyNode.h  AssignmentExpressionNode.h  AssignmentExpressionPlusNode.h  AssignmentExpressionSignedRightShiftNode.h  AssignmentExpressionSimpleNode.h  AssignmentExpressionUnsignedRightShiftNode.h  AssignmentPatternNode.h  AssingmentExpressionExponentiationNode.h  AsyncArrowFunctionExpressionNode.h  AsyncFunctionDeclarationNode.h  AsyncFunctionExpressionNode.h  AwaitExpressionNode.h  BinaryExpressionBitwiseAndNode.h  BinaryExpressionBitwiseOrNode.h  BinaryExpressionBitwiseXorNode.h  BinaryExpressionDivisionNode.h  BinaryExpressionEqualNode.h  BinaryExpressionExponentiationNode.h  BinaryExpressionGreaterThanNode.h  BinaryExpressionGreaterThanOrEqualNode.h  BinaryExpressionInNode.h  BinaryExpressionInstanceOfNode.h  (+105 more)
src/parser/esprima_cpp/: Messages.h  ParserContext.h  esprima.cpp  esprima.h
src/runtime/: ArgumentsObject.cpp  ArgumentsObject.h  ArrayBuffer.cpp  ArrayBuffer.h  ArrayBufferObject.cpp  ArrayBufferObject.h  ArrayObject.cpp  ArrayObject.h  AsyncFromSyncIteratorObject.cpp  AsyncFromSyncIteratorObject.h  AsyncGeneratorObject.cpp  AsyncGeneratorObject.h  AtomicString.cpp  AtomicString.h  BackingStore.cpp  BackingStore.h  BigInt.cpp  BigInt.h  BigIntObject.cpp  BigIntObject.h  BooleanObject.cpp  BooleanObject.h  BoundFunctionObject.cpp  BoundFunctionObject.h  BuiltinFunctionObject.cpp  BuiltinFunctionObject.h  CompressibleString.cpp  CompressibleString.h  Context.cpp  Context.h  DataViewObject.h  DateObject.cpp  DateObject.h  DisposableObject.cpp  DisposableObject.h  EncodedSmallValueVectors.h  EncodedValue.h  EncodedValueData.h  EnumerateObject.cpp  EnumerateObject.h  (+220 more)
src/runtime/serialization/: SerializedBigIntValue.h  SerializedBooleanValue.h  SerializedNullValue.h  SerializedNumberValue.h  Serializer.h  (+6 more)
src/shell/: CMakeLists.txt  DefaultJobQueue.cpp  DefaultJobQueue.h  GlobalObjectBuiltinTestFunctions.cpp  Shell.cpp  shell.cpp
src/util/: Base64.cpp  Base64.h  BasicString.cpp  BasicString.h  BloomFilter.h  Float16.h  ISO8601.cpp  ISO8601.h  Int128.cpp  Int128.h  Optional.h  SmartPtr.h  SpinLock.h  TightVector.h  Util.cpp  Util.h  Variant.h  Vector.cpp  Vector.h  Yield.h
src/wasm/: BuiltinWASM.cpp  ExportedFunctionObject.cpp  ExportedFunctionObject.h  GlobalObjectBuiltinWASM.cpp  WASMBuiltinOperations.h  WASMModuleObject.cpp  WASMModuleObject.h  WASMObject.cpp  WASMObject.h  WASMOperations.cpp  WASMOperations.h  WASMValueConverter.cpp  WASMValueConverter.h
(+508 files in other folders)
