# SOURCE FILES
FILE (GLOB_RECURSE ESCARGOT_SRC
    api/*.cpp
    heap/*.cpp
    interpreter/*.cpp
    parser/*.cpp
    runtime/*.cpp
    util/*.cpp
)
FILE (GLOB YARR_SRC ${ESCARGOT_THIRD_PARTY_ROOT}/yarr/*.cpp)
FILE (GLOB DOUBLE_CONVERSION_SRC ${ESCARGOT_THIRD_PARTY_ROOT}/double_conversion/*.cc)

SET (ESCARGOT_SRC_LIST
    ${ESCARGOT_SRC}
    ${YARR_SRC}
    ${DOUBLE_CONVERSION_SRC}
)


# BUILD
ADD_LIBRARY (${ESCARGOT_TARGET} ${ESCARGOT_SRC_LIST})
TARGET_INCLUDE_DIRECTORIES (${ESCARGOT_TARGET} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${ESCARGOT_INCDIRS})
TARGET_LINK_LIBRARIES (${ESCARGOT_TARGET} ${ESCARGOT_LIBRARIES})
SET_TARGET_PROPERTIES (${ESCARGOT_TARGET} PROPERTIES
                       COMPILE_FLAGS "${ESCARGOT_CXXFLAGS} $ENV{CXXFLAGS}"
                       LINK_FLAGS "${ESCARGOT_LDFLAGS}")
