# SOURCE FILES
FILE (GLOB ESCARGOT_SHELL_SRC *.cpp)

# BUILD
ADD_EXECUTABLE (${ESCARGOT_TARGET}-shell ${ESCARGOT_SHELL_SRC})
SET_TARGET_PROPERTIES (${ESCARGOT_TARGET}-shell PROPERTIES OUTPUT_NAME ${ESCARGOT_TARGET})

TARGET_LINK_LIBRARIES (${ESCARGOT_TARGET}-shell ${ESCARGOT_TARGET})
SET_TARGET_PROPERTIES (${ESCARGOT_TARGET}-shell PROPERTIES
                       COMPILE_FLAGS "${ESCARGOT_CXXFLAGS} $ENV{CXXFLAGS}"
                       LINK_FLAGS "${ESCARGOT_LDFLAGS}")

ADD_CUSTOM_COMMAND (TARGET ${ESCARGOT_TARGET}-shell POST_BUILD
                    COMMAND cp ${ESCARGOT_OUTDIR}/${ESCARGOT_TARGET} ${CMAKE_BINARY_DIR})
